--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 appnope==0.1.4
 asttokens==2.4.1
+cffi==1.16.0
 comm==0.2.2
+cryptography==42.0.5
 debugpy==1.8.1
 decorator==5.1.1
 et-xmlfile==1.1.0
@@ -12,7 +14,9 @@ jedi==0.19.1
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 matplotlib-inline==0.1.7
+msoffcrypto-tool==5.3.1
 nest-asyncio==1.6.0
+olefile==0.47
 openpyxl==3.1.2
 packaging==24.0
 parso==0.8.4
@@ -23,6 +27,7 @@ prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycparser==2.22
 Pygments==2.17.2
 pytest==8.1.1
 python-dateutil==2.9.0.post0
